# algorithms

./: CMakeLists.txt
examples/annealing/backpack/: Backpack.h  BackpackTest.cpp  Knapsack.h  KnapsackTest.cpp
examples/search/eight-puzzle/: EightPuzzle.h  EightPuzzleTest.cpp
examples/search/getting-zero/: GettingZero.h  GettingZeroTest.cpp
include/annealing/: Annealing.hpp
include/search/: Search.hpp
include/utils/: Common.hpp  HashCombine.hpp
